--- a/index.html
+++ b/index.html
@@ -412,13 +412,11 @@
         })
 
         initialize.then(() => {
-            if (instantGamesBridge.platform.id === instantGamesBridge.PLATFORM_ID.YANDEX)
+            if (instantGamesBridge.platform.id === instantGamesBridge.PLATFORM_ID.VK)
                 showInterstitial()
 
             setMinimumDelayBetweenInterstitial(180);
         })
-
-
     </script>
 </body>
 
