--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 dataUrl: 'Build/Shooooot.data.unityweb',
                 frameworkUrl: 'Build/Shooooot.framework.js.unityweb',
                 codeUrl: 'Build/Shooooot.wasm.unityweb',
-                    streamingAssetsUrl: 'StreamingAssets',
+                streamingAssetsUrl: 'StreamingAssets',
                 companyName: 'DefaultCompany',
                 productName: 'Shooooot',
                 productVersion: '1.0',
@@ -416,6 +416,8 @@
                 showInterstitial()
 
             setMinimumDelayBetweenInterstitial(180);
+
+            console.log("DELAY BETWEEN ADS" + getMinimumDelayBetweenInterstitial);
         })
     </script>
 </body>
